// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RushXCommandLine launchRushXAsync executes a valid package script 1`] = `
Array [
  Array [
    "[1mRush Multi-Project Build Tool 40.40.40[33m[39m[22m - Node.js 12.12.12 (LTS)",
  ],
  Array [
    "> \\"an acme project build command\\"
",
  ],
]
`;

exports[`RushXCommandLine launchRushXAsync executes a valid package script with no startup banner 1`] = `Array []`;

exports[`RushXCommandLine launchRushXAsync fails if the package does not contain a matching script 1`] = `
Array [
  Array [
    "[1mRush Multi-Project Build Tool 40.40.40[33m[39m[22m - Node.js 12.12.12 (LTS)",
  ],
]
`;

exports[`RushXCommandLine launchRushXAsync prints usage info 1`] = `
Array [
  Array [
    "[1mRush Multi-Project Build Tool 40.40.40[33m[39m[22m - Node.js 12.12.12 (LTS)",
  ],
  Array [
    "usage: rushx [-h]",
  ],
  Array [
    "       rushx [-q/--quiet] [-d/--debug] [--ignore-hooks] <command> ...
",
  ],
  Array [
    "Optional arguments:",
  ],
  Array [
    "  -h, --help            Show this help message and exit.",
  ],
  Array [
    "  -q, --quiet           Hide rushx startup information.",
  ],
  Array [
    "  -d, --debug           Run in debug mode.
",
  ],
  Array [
    "Project commands for [36m@acme/acme[39m:",
  ],
  Array [
    "  [36mbuild: [39m\\"an acme project build command\\"",
  ],
  Array [
    "  [36mtest:  [39m\\"an acme project test command\\"",
  ],
]
`;
